hphp/hack/test/typecheck/nonnull/nullsafe_member_access_on_nonnull.php
<?hh

function f(nonnull $x): void {
  $_ = $x?->foo();
}
